--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -5,6 +5,7 @@
   padding: 10px 20px;
   border-radius: 999px;
   width: 75vw;
+  height: 30px;
   margin: 0 auto;
   margin-top: 40px;
   max-width: 560px;
@@ -19,4 +20,32 @@
 
 .search_input > input:focus {
   outline-width: 0;
+}
+.search_inputIcon {
+  color: gray;
+}
+.search_button {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.search_button button {
+  margin: 5px;
+  padding: 10px 20px;
+  background-color: #f8f8f8;
+  border: 1px solid white;
+  text-transform: inherit;
+  color: #5f6368;
+}
+.search_button button:hover {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  background-image: -webkit-linear-gradient(top, #f8f8f8, #f1f1f1);
+  background-color: #f8f8f8;
+  border: 1px solid #c6c6c6;
+  color: #222;
+}
+
+.search_buttonHidden {
+  display: none !important;
 }
